RESOLVED FIXED81692
[chromium] timing functions are getting incorrectly applied for accelerated css transitions
https://bugs.webkit.org/show_bug.cgi?id=81692
Summary [chromium] timing functions are getting incorrectly applied for accelerated c...
vollick
Reported 2012-03-20 12:53:10 PDT
If you move the mouse on and off the div while it is animating (with threaded animation enabled), you will see a hiccup in the animation each time a new transition is started. <!DOCTYPE html> <html> <head> <style> .box{ width: 200px; height: 200px; border: 1px solid; -webkit-transform: translateZ(0px); background: #f9f900; opacity: 0.0; -webkit-transition: opacity 2s ease-in-out; } .box:hover { opacity: .8; } </style> </head> <body> <div class="box"> </div> </body> </html>
Attachments
Patch (11.51 KB, patch)
2012-03-20 14:19 PDT, vollick
no flags
Patch (11.66 KB, patch)
2012-03-20 19:11 PDT, vollick
no flags
vollick
Comment 1 2012-03-20 14:19:38 PDT
Created attachment 132895 [details] Patch Needed to consider global timing functions as well as the per-keyframe timing functions.
WebKit Review Bot
Comment 2 2012-03-20 15:57:06 PDT
Comment on attachment 132895 [details] Patch Attachment 132895 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/12067015 New failing tests: fast/dom/error-to-string-stack-overflow.html
Nat Duca
Comment 3 2012-03-20 18:11:19 PDT
Comment on attachment 132895 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=132895&action=review LGTM. @enne? > Source/WebCore/platform/graphics/chromium/cc/CCLayerAnimationController.cpp:71 > + if (!originalTimingFunction && animation->isTimingFunctionSet()) comment here explaining what this branch is doing
vollick
Comment 4 2012-03-20 19:11:29 PDT
Created attachment 132946 [details] Patch (In reply to comment #3) > (From update of attachment 132895 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=132895&action=review > > LGTM. @enne? > > > Source/WebCore/platform/graphics/chromium/cc/CCLayerAnimationController.cpp:71 > > + if (!originalTimingFunction && animation->isTimingFunctionSet()) > > comment here explaining what this branch is doing Added comment.
Adrienne Walker
Comment 5 2012-03-20 21:17:11 PDT
Comment on attachment 132946 [details] Patch R=me, mostly due to Nat's review.
WebKit Review Bot
Comment 6 2012-03-21 05:22:45 PDT
Comment on attachment 132946 [details] Patch Clearing flags on attachment: 132946 Committed r111527: <http://trac.webkit.org/changeset/111527>
WebKit Review Bot
Comment 7 2012-03-21 05:22:50 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.